# gifenc

./: CMakeLists.txt  Makefile  example.c
